fixed z-index on blackout div

--- a/css/rhubarb2.css
+++ b/css/rhubarb2.css
@@ -692,7 +692,6 @@ body {
 .blackout {
   width: 100%;
   height: 100%;
-  z-index: 88;
   background-color: #000;
   position: fixed;
   top: 0;
@@ -700,11 +699,13 @@ body {
 
 .blackout-hidden {
   opacity: 0;
+  z-index: -100;
   transition: all .2s ease-out .7s;
 }
 
 .blackout-active {
   opacity: .8;
+  z-index: 88;
   transition: all .2s ease-out;
 }
 
